--- a/src/App.css
+++ b/src/App.css
@@ -80,7 +80,6 @@ h1 {
 
 .form-group {
   margin-bottom: 15px;
-  overflow: hidden;
 }
 
 label {
@@ -95,6 +94,7 @@ select {
   border-radius: 5px;
   border: 1px solid #ddd;
   font-size: 16px;
+  box-sizing: border-box;
 }
 
 button {
@@ -149,4 +149,11 @@ button:hover {
   width: 100%;  /* Allow the width to adjust as needed */
   border: none; /* Remove iframe border */
   margin-bottom: 10px;
+}
+
+.spinner-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 60vh; /* Adjust as needed */
 }
