--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@
 
 .pdf-viewer-container {
   flex: 1; /* Take up the remaining space */
-  padding: 20px; 
+  padding: 20px;
 }
 
 .worksheet-display {
@@ -64,18 +64,18 @@
   background-color: white;
   padding: 20px;
   border-radius: 5px;
-  width: 80%;   /* Adjust the width as needed */
-  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+  width: 80%; /* Adjust the width as needed */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 90vh; 
+  height: 90vh;
   overflow: auto; /* Scroll if content exceeds modal height */
 }
 
 @media (max-width: 768px) {
   .modal-content {
-    width: 90%;   /* Larger width for smaller screens */
+    width: 90%; /* Larger width for smaller screens */
     height: 90%; /* Auto height for better mobile viewing */
   }
 }
@@ -85,13 +85,14 @@ h1 {
   text-align: center;
 }
 
-.form-container{
+.form-container {
   padding: 60px;
+  padding-top: 10px;
 }
 
 /* Media query for smaller screens */
 @media (max-width: 768px) {
-  .form-container{
+  .form-container {
     padding: 0px;
   }
 }
@@ -125,7 +126,7 @@ input[type="text"] {
 }
 
 button {
-  background-color: #4CAF50; /* Green */
+  background-color: #4caf50; /* Green */
   border: none;
   color: white;
   padding: 15px 32px;
@@ -136,13 +137,12 @@ button {
   margin: 4px 2px;
   cursor: pointer;
   border-radius: 5px;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 button:hover {
   background-color: #45a049;
 }
-
 
 /* Responsive design */
 @media (max-width: 768px) {
@@ -151,10 +151,9 @@ button:hover {
   }
 }
 
-
 .download-button {
   display: inline-block;
-  background-color: #4CAF50; /* Example button color */
+  background-color: #4caf50; /* Example button color */
   color: white;
   padding: 10px 20px;
   border: none;
@@ -166,14 +165,14 @@ button:hover {
   font-size: 16px;
 }
 
-.download-button:hover, .download-button:focus {
+.download-button:hover,
+.download-button:focus {
   background-color: #45a049; /* Slightly darker green */
 }
 
-
 .pdf-iframe {
   height: 60vh; /* Set the height to a percentage of the viewport height */
-  width: 100%;  /* Allow the width to adjust as needed */
+  width: 100%; /* Allow the width to adjust as needed */
   border: none; /* Remove iframe border */
   margin-bottom: 10px;
 }
@@ -199,21 +198,21 @@ button:hover {
 }
 
 .thumbnail-image {
-  width: 100px; 
-  height: 141px; 
-  margin: 5px; 
-  cursor: pointer; 
-  border: 1px solid #ddd; 
-  border-radius: 5px; 
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+  width: 100px;
+  height: 141px;
+  margin: 5px;
+  cursor: pointer;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 @media (max-width: 400px) {
   .thumbnail-image {
-    width: 100px; 
-    height: 141px; 
+    width: 100px;
+    height: 141px;
     margin: 0;
-    margin-top: 15px; 
+    margin-top: 15px;
   }
 }
 
@@ -223,16 +222,15 @@ button:hover {
   right: -5px;
   border: none;
   background: #eea830;
-  width: 30px; 
-  height: 30px; 
+  width: 30px;
+  height: 30px;
   font-size: 16px;
   cursor: pointer;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3); 
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
 
 /* Toggle Switch */
 .switch {
@@ -243,7 +241,7 @@ button:hover {
 }
 
 /* Switch Slider */
-.switch input { 
+.switch input {
   opacity: 0;
   width: 0;
   height: 0;
@@ -257,8 +255,8 @@ button:hover {
   right: 0;
   bottom: 0;
   background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 .slider:before {
@@ -269,16 +267,16 @@ button:hover {
   left: 4px;
   bottom: 4px;
   background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 input:checked + .slider {
-  background-color: #2196F3;
+  background-color: #2196f3;
 }
 
 input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
+  box-shadow: 0 0 1px #2196f3;
 }
 
 input:checked + .slider:before {
@@ -307,4 +305,22 @@ input:checked + .slider:before {
 .toggle-container label {
   margin: 0;
   font-size: 16px; /* Adjust the font size as needed */
+}
+.hint-topic {
+  margin-top: 5px;
+  font-size: 14px;
+}
+
+@media (max-width: 600px) {
+  .landing-page h1 {
+    font-size: 20px;
+    text-align: left;
+    margin-top: 0px;
+  }
+  .landing-page h4 {
+    font-size: 12px;
+  }
+  .form-container p {
+    font-size: 12px;
+  }
 }
